<resources>
    <string name="app_name">Hamdad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_persian">نرم افزار همداد</string>
    <string name="score">رتبه بندی</string>
    <string name="calendar">تقویم</string>
    <string name="archive">آرشیو</string>
    <string name="events">رویداد ها</string>
    <string name="profile">پروفایل</string>


    <string name="test">برنامه ی مناظره یمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتیمناظره ی دانشجویی انجمن اسلامی دانشگاه صنعتی دانشجویی انجمن اسلامی دانشگاه صنعتی اصفهان</string>
    <string name="reminder">یادآوری</string>
    <string name="username">نام کاربری</string>
    <string name="password">کلمه ی عبور</string>
    <string name="login">ورود</string>
    <string name="university">دانشگاه صنعتی اصفهان</string>
    <string name="participate_event">شرکت در رویداد</string>
    <string name="score_event">نظر سنجی رویداد</string>
    <string name="time">ساعت:  %s</string>
    <string name="date"> تاریخ:  %s</string>
    <string name="score_archive"> امتیاز:  %s</string>
    <string name="place"> مکان:  %s</string>
    <string name="events_list">لیست رویداد ها</string>
    <string name="event_filter">فیلتر رویداد ها</string>
    <string name="event_archive">آرشیو رویداد ها</string>

</resources>
