<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:layoutDirection="rtl"
    tools:context=".login.LoginActivity">


    <ImageView
        android:id="@+id/login_top_banner"
        android:layout_width="wrap_content"
        android:layout_height="330dp"
        android:background="@mipmap/login_top_banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <RelativeLayout
        android:id="@+id/login_info_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/login_cardview"
            android:clipToPadding="false"
            android:elevation="10dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">


                <ImageView
                    android:src="@drawable/ic_person_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_marginStart="10dp"
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_lock_outline_black_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:layout_marginStart="10dp"
                    android:gravity="right"
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

            </LinearLayout>




        </LinearLayout>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            android:src="@mipmap/login_iut_logo" />

    </RelativeLayout>


    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        app:spinning_bar_color="@color/white"
        android:textAppearance="@style/vazir_font"
        android:id="@+id/login"
        app:spinning_bar_width="4dp"
        app:spinning_bar_padding="6dp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_signin_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/login_info_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="20dp"
        android:background="#F0F0F0"
        app:layout_constraintBottom_toTopOf="@+id/year"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:textColor="@color/gray"
        android:textAppearance="@style/vazir_font"
        android:id="@+id/university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#fff"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/university"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/year"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:textColor="@color/gray"
        android:textAppearance="@style/vazir_font"
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="۱۳۹۸"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>