<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="de.co.derakhshan.hamdad.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layoutDirection="rtl"
        android:id="@+id/motionLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layoutDescription="@xml/profile_motion">



        <LinearLayout
            android:id="@+id/menu_holder"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/events"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/profile_event_menu"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|bottom"
                    android:text="@string/events"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/profile_profile_menu"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|bottom"
                    android:text="@string/profile"
                    android:textAppearance="@style/vazir_font"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="55dp"
            android:src="@drawable/profile_light_blue_back"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/fake_back"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top|center_horizontal"
            android:background="@color/white"
            android:layoutDirection="rtl"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="20dp"
                android:src="@mipmap/menu_dots"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/app_name_persian"
                android:textAppearance="@style/vazir_font"
                android:textSize="23sp" />

        </RelativeLayout>


        <include
            android:id="@+id/content"
            layout="@layout/profile_include"
            app:viewModel="@{viewModel}" />


        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>

</layout>