<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="de.co.derakhshan.hamdad.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layoutDirection="rtl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:fadingEdgeLength="50dp"
            android:requiresFadingEdge="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:layoutDirection="rtl"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginBottom="65dp"
                        android:background="@drawable/profile_white_top_background"
                        android:elevation="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />


                    <LinearLayout
                        android:id="@+id/info_holder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:elevation="10dp"
                        android:orientation="horizontal"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/profileImage"
                                loadURL="@{viewModel.cover}"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:padding="6dp"
                                tools:ignore="ContentDescription" />

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:background="@drawable/rounded_profile_image"
                                android:scaleType="fitXY"
                                tools:ignore="ContentDescription" />
                        </RelativeLayout>


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.name}"
                                android:textAppearance="@style/vazir_font"
                                android:textColor="@color/dark_blue"
                                android:textSize="18sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.phone}"
                                android:textAppearance="@style/vazir_font"
                                android:textColor="@color/gray" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{viewModel.identifyCode}"
                                android:textAppearance="@style/vazir_font"
                                android:textColor="@color/gray" />

                        </LinearLayout>


                    </LinearLayout>

                    <androidx.viewpager2.widget.ViewPager2
                        android:id="@+id/reminderPager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:elevation="10dp"
                        android:layoutDirection="rtl"
                        android:overScrollMode="never"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/info_holder" />

                    <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
                        android:id="@+id/dots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:dotsColor="@color/light_blue"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/reminderPager" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/utils"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    app:layout_constraintTop_toBottomOf="@+id/top">

                    <LinearLayout
                        android:id="@+id/calendar"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/profile_menu_item_btn"
                        android:elevation="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@mipmap/calendar_icon"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:gravity="center"
                            android:text="@string/calendar"
                            android:textAppearance="@style/vazir_font"
                            android:textColor="@color/dark_blue"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/archive"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/profile_menu_item_btn"
                        android:elevation="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@mipmap/archive_icon"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:gravity="center"
                            android:text="@string/archive"
                            android:textAppearance="@style/vazir_font"
                            android:textColor="@color/dark_blue"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/score"
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        android:layout_weight="0.33"
                        android:background="@drawable/profile_menu_item_btn"
                        android:elevation="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:src="@mipmap/score_icon"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:gravity="center"
                            android:text="@string/score"
                            android:textAppearance="@style/vazir_font"
                            android:textColor="@color/dark_blue"
                            android:textSize="18sp" />


                    </LinearLayout>


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>